--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,10 @@ nav ul li {
 }
 
 
+#newsletter {
+	 z-index: 1;
+}
+
 
 #social {
     margin: 0px auto;
@@ -161,6 +165,30 @@ nav ul li {
     display: inline-block;
     margin: 10px;
 }
+
+#newsletter {
+	position: fixed; 
+    bottom: 0;
+    left: 15px;
+	width: 280px;
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 10px;
+	margin-bottom: 20px;
+	display: none;
+	z-index: 1;
+}
+
+#newsletter h3 {
+	width: 300px;
+}
+
+#newsletter a {
+    text-decoration: none;
+    color: black;
+    position: fixed;
+    left: 290px;
+}
+
 
 
 /* ++++++++ !MEDIA QUERY TIME! ++++++++ */
